# osik-control

./: CMakeLists.txt  README.md  osik-control.pc.cmake
cmake/: FindqpOASES.cmake
doc/: Doxyfile.in
include/osik_control/: KinematicSolver.h  KinematicSolverNS.h  KinematicSolverWQP.h  KinematicTask.h  PoseTask.h  tools.h
src/: CMakeLists.txt  KinematicSolver.cpp  KinematicSolverNS.cpp  KinematicSolverWQP.cpp  KinematicTask.cpp  PoseTask.cpp  tools.cpp
unitTests/: CMakeLists.txt  test_position_task.cpp  test_solver_wqp.cpp
